[fix] login doesn't wrap

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -4,9 +4,7 @@
   background-color: variables.$navbarColor;
   display: flex;
   align-items: center;
-  &Container {
-    max-width: 1200px;
-  }
+  justify-content: center;
 }
 
 .Categories {
@@ -14,7 +12,7 @@
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
   list-style-type: none;
 }
 
